# BrainOpenGLEngine

./: (  CMakeLists.txt  README.md  unixBuilder.sh
backup/: deleteBuild.sh  main.cpp
backup/example/: main.cpp
include/: brain_camera.hpp  brain_window.hpp  engine.hpp  keyboardcontroller.hpp  shader.hpp
shaders/: simple_shader.frag  simple_shader.vert
src/: brain_camera.cpp  brain_window.cpp  engine.cpp  keyboardcontroller.cpp  main.cpp  shader.cpp
